--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --dark-color: #0F172A;
+  --light-color: #F8FAFC;
+  --medium-background-color: #F1F5F9;
+  --dark-accent-color: #064E3B;
+  --light-accent-color: #059669;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
