--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   --light-accent-color: #059669;
 }
 
+* {
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
