--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 20px;
-    background-color: var(--dark-accent-color);
+    background-color: rgba(6, 78, 59, 0.9);
     padding: 30px;
 
 }
