--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@ nav {
     top: 0;
     right: 0;
     left: 0;
-    background-color: var(--light-color);
+    background-color: rgba(255,255,255, 0.1);
     box-shadow: 0 0 5px var(--dark-color);
     color: var(--dark-color);
     padding: 0 20%;
