--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   box-sizing: border-box;
   margin: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -22,8 +25,12 @@ body {
   'wght' 900,
   'GRAD' 0,
   'opsz' 48
-
-
+}
+h2 {
+  color: var(--light-accent-color);
+  text-align: center;
+  text-shadow: 0 1px var(--dark-color);
+  margin-top: 5%;
 }
 
 
