--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@ nav {
     top: 0;
     right: 0;
     left: 0;
-    background-color: rgba(255,255,255, 0.1);
+    background-color: var(--light-color);
     box-shadow: 0 0 5px var(--dark-color);
     color: var(--dark-color);
     padding: 0 20%;
@@ -79,6 +79,8 @@ a:link, a:visited {
     color: var(--light-accent-color);
     background-color: var(--dark-color);
     padding: 11px;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
     
     
 }
@@ -92,6 +94,7 @@ a:link, a:visited {
     }
     nav {
         padding: 0 10%;
+        background-color: transparent;
     }
    
 
